[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/UI/Themes/Menu.theme" type="Theme" id=1]
[ext_resource path="res://Assets/Audio/Music/mm_v3.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://interfaces/menu/FadePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/Menu/Menu_Art_0.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Custom Fonts/AttackOnCourier.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/UI/Menu/Menu_Art_1.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.117647, 0.121569, 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 4
outline_color = Color( 0.764706, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideMenu" type="VBoxContainer" parent="."]
anchor_right = 0.296
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.104
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="ToolButton" parent="SideMenu"]
margin_top = 257.0
margin_right = 378.0
margin_bottom = 323.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "New Game"

[node name="ContinueButton" type="ToolButton" parent="SideMenu"]
margin_top = 327.0
margin_right = 378.0
margin_bottom = 393.0
theme = ExtResource( 1 )
disabled = true
enabled_focus_mode = 0
text = "Continue"

[node name="TestLevelButton4" type="ToolButton" parent="SideMenu"]
visible = false
margin_top = 362.0
margin_right = 378.0
margin_bottom = 428.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Test Level 3"

[node name="OptionsButton" type="ToolButton" parent="SideMenu"]
visible = false
margin_top = 362.0
margin_right = 378.0
margin_bottom = 428.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Options"

[node name="QuitButton" type="ToolButton" parent="SideMenu"]
margin_top = 397.0
margin_right = 378.0
margin_bottom = 463.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
text = "Quit"

[node name="MenuArt1" type="TextureRect" parent="."]
visible = false
margin_left = 339.0
margin_top = 123.0
margin_right = 1284.0
margin_bottom = 681.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuArt2" type="TextureRect" parent="."]
margin_left = 339.0
margin_top = 123.0
margin_right = 1284.0
margin_bottom = 681.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 5.39844
margin_top = 28.3065
margin_right = 1279.4
margin_bottom = 129.307
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.741176, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.815686, 0.752941, 0.752941, 0.619608 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Corporate Hellfare"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="."]
margin_left = 3.0
margin_top = 688.0
margin_right = 1284.0
margin_bottom = 721.0
text = "Art/Animation: PhallusBro | Code: SiliconMoose | Level Design: Lineman | Music: zgadnij"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
autoplay = true

[node name="FadePanel" parent="." instance=ExtResource( 4 )]
visible = false
